2006-12-09  Saso Kiselkov <skiselkov@gmail.com>

    * Subprojects/AboutEtoileEntry/ETMachineInfo.m: Added CPU name formatting
      rules to strip unneeded whitespace.

2006-12-04  Saso Kiselkov <skiselkov@gmail.com>

    * GNUmakefile.postamble: Added forgotten ".app" suffix in last post-build
      rule.

2006-10-19  Quentin Mathe <qmathe@club-internet.fr>

    * GNUmakefile.postamble: Modified to take in account .debug and .profile
    application extensions are not used anymore by gnustep-make.
    * GNUmakefile.preamble: Modified to link WorkspaceCommKit.
    * Controller.h:
    * Controller.m:
    Turned on 'log out' by implementing new method -workspaceApp returning an
    instance of SCSystem server class part etoile_system daemon. This code 
    relies on WorkspaceCommKit a private framework part of System.

2006-09-10  Quentin Mathe <qmathe@club-internet.fr>

    * GNUmakefile.postamble: Added include etoile.make and declared 
    variable DEPENDENCIES to fix the Etoile repository build. The build was
    broken by passing 'x11=yes' without importing XWindowServerKit 
    dependency (library and headers).

2006-09-06  Quentin Mathe <qmathe@club-internet.fr>

    * Subprojects/HardwareEntry:
    * Subprojects/LookAndBehaviorEntry:
    Added new system bar entries, they allow to launch preferences related
    applications.
    * Subprojects/SystemPreferencesEntry/SystemPreferencesEntry.m:
    Made the entry invisible in the menu by default, unless the user requests
    it by setting GSSystemPreferencesApplication.

    * GNUmakefile:
    * EtoileMenuServer.pmproj: Modified to include the new subprojects.
    * GNUmakefile.preamble: Turned on XWindowServerKit use by default, this
    eliminates window position issues with Azalea. It's still possible to build
    EtoileMenuServer without X11 dependency by passing the flag 'x11=no'.

2006-07-21  Saso Kiselkov <skiselkov@gmail.com>

    * main.m: Updated default name GSDontShowAppIcon to GSSuppressAppIcon.
